--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterProjectStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterProjectStepUserControl.xaml
@@ -28,6 +28,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -47,10 +48,11 @@
 
         <TextBlock Grid.Row="3" Grid.Column="0" Text="Докомплектовать заказ" />
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Understaff}" Margin="6,6,0,0" />
-
-        <CheckBox Grid.Row="4" Grid.Column="1" Content="Согласование работы" IsChecked="{Binding WorkAccepted}" Margin="6,6,0,0"/>
+        <TextBlock Grid.Row="4" Grid.Column="0" Text="Артикул материала" />
+        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding ProstheticArticul}" Margin="6,6,0,0" Width="260" HorizontalAlignment="Left"/>
+        <CheckBox Grid.Row="5" Grid.Column="1" Content="Согласование работы" IsChecked="{Binding WorkAccepted}" Margin="6,6,0,0"/>
       
-        <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="6,6,0,0">
+        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="6,6,0,0">
             <Button Content="Загрузить STL файл"
                     Command="{Binding FilesContainer.UploadStlFileCommand}"/>
             <Button Content="Скачать STL файл" Margin="6,0,0,0"
@@ -61,6 +63,6 @@
             <Button Content="Скачать фото" Margin="6,0,0,0"
                     Command="{Binding FilesContainer.DownloadPhotoCommand}"/>
         </StackPanel>
-        <local:MouthUserControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="6,6,0,0" />
+        <local:MouthUserControl Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="6,6,0,0" />
     </Grid>
 </UserControl>
