--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewmodels="clr-namespace:Germadent.Rma.App.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
@@ -174,7 +173,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание работ" VerticalAlignment="Center" Margin="0,5,0,0"/>
-            <TextBox Grid.Row="0" Grid.Column="1" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True" TextWrapping="Wrap" MaxLines="2" Height="35"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True" />
             <Button Grid.Row="0" Grid.Column="2" Content="Копировать" Margin="6,6,0,0"
                     Command="{Binding CopyDescriptionCommand}"/>
         </Grid>
