--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterInfoStepUserControl.xaml
@@ -28,6 +28,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Заказчик *" Margin="0,0,0,3"
@@ -52,8 +53,11 @@
         <TextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding TechnicPhone, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="4" Text="Дата и время получения работы"/>
+        <TextBlock Grid.Column="0" Grid.Row="4" Text="Дата и время получения работы"/>
         <DatePicker Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
                     SelectedDate="{Binding Created}" SelectedDateFormat="Short" />
+
+        <TextBlock Grid.Column="0" Grid.Row="5" Text="Комментарий"/>
+        <TextBox Grid.Column="1" Grid.Row="5" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </UserControl>
