--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
@@ -23,14 +23,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
         <Canvas Grid.Row="0" Background="White">
             <Path x:Name="toothCardPath" Stroke="Black" StrokeThickness="2" />
         </Canvas>
-        <ListBox Grid.Column="0" x:Name="_mouthListBox"
+        <ListBox Grid.Row="0" x:Name="_mouthListBox"
                  Style="{x:Null}"
                  Background="Transparent"
                  ItemsSource="{Binding Teeth}"
@@ -175,22 +171,17 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание работ" VerticalAlignment="Top" Margin="0,6,0,0" HorizontalAlignment="Center"/>
-            <TextBox Grid.Row="1" Grid.Column="0" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True" MaxLines="5" MinLines="5" 
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание работ" VerticalAlignment="Top" Margin="0,6,0,0"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True" MaxLines="5" MinLines="5" 
                      VerticalScrollBarVisibility="Auto"
                      VerticalContentAlignment="Top"/>
-            <Button Grid.Row="2" Grid.Column="0" Content="Копировать" Margin="6,6,0,0" VerticalAlignment="Top"
+            <Button Grid.Row="0" Grid.Column="2" Content="Копировать" Margin="6,6,0,0" VerticalAlignment="Top"
                     Command="{Binding CopyDescriptionCommand}"/>
         </Grid>
     </Grid>
